# todo-app-ports-and-adapters

./: README.md  alembic.ini  pyproject.toml
alembic/versions/: ff42540bed28_initial_revision.py
src/: main.py
src/adapters/: todo_adapter.py
src/adapters/db/: schema.py  session.py
src/domain/ports/: todo.py
src/domain/todo/: model.py  service.py
src/entrypoints/api/: main.py  router.py
src/entrypoints/api/healthcheck/: router.py
src/entrypoints/api/todo/: router.py
